fix(frontend): online cup announcement player cell overflow

--- a/apps/frontend/src/pages/main/components/news-online-announce/news-online-announce.component.less
+++ b/apps/frontend/src/pages/main/components/news-online-announce/news-online-announce.component.less
@@ -40,6 +40,10 @@
   border-bottom: 1px solid @border-color;
 }
 
+.player-cell {
+  width: 172px;
+}
+
 .players-table-description {
   margin-top: 12px;
 }
