--- a/apps/frontend/src/shared/components/player-cell/player-cell.component.less
+++ b/apps/frontend/src/shared/components/player-cell/player-cell.component.less
@@ -32,6 +32,9 @@
     margin-top: 2px;
     font-family: inherit;
     letter-spacing: inherit;
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
 
     &.light {
       margin-top: 0;
